--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
     <header class="header-background">
         <nav>
             <div class="logo">
-                <img src="images\logo.jpg" alt="Kerala Tourism Logo">
+                <img src="images/logo.jpg" alt="Kerala Tourism Logo">
             </div>
-            <ul>
+            <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Districts</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Sign Up</a></li>
                 <li><a href="#">Login</a></li>
             </ul>
+            <div class="hamburger">
+                <div class="bar"></div>
+                <div class="bar"></div>
+                <div class="bar"></div>
+            </div>
         </nav>
         <section class="hero">
             <div class="hero-content">
@@ -31,7 +36,6 @@
     <main>
         <section class="top-destinations">
             <h2>TOP DESTINATIONS</h2>
-        
             <div class="destination">
                 <img src="images/bekal.jpg" alt="Bekal Fort">
                 <h3>BEKAL FORT</h3>
@@ -45,7 +49,7 @@
                 <button>SEE MORE</button>
             </div>
             <div class="destination">
-                <img src="images\kolukkumalia.jpg" alt="Kolukkumalai">
+                <img src="images/kolukkumalia.jpg" alt="Kolukkumalai">
                 <h3>KOLUKKUMALAI</h3>
                 <p>Kolukkumalai is home to the highest tea plantations in the world...</p>
                 <button>SEE MORE</button>
@@ -62,24 +66,24 @@
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        Indias most verdant state ,rated by National Geographic Traveller as
-one of the worlds 50 must-see destinations, is a paradisiacal
-landscape of palm-lined beaches, steamy jungles, plantation-covered
-hills, and tropical rivers and lakes. Visitors come here primarily to
-unwind and indulge; this is, after all, where succumbing to a
-therapeutic Ayurvedic massage is as mandatory as idling away an
-afternoon aboard a slowly drifting kettuvallam, or sipping coconut
-water under a tropical sun before taking in a wonderfully ritualized
-Kathakali dance. Eastward, the spice-scented Cardamom Hills and wild
-elephants of Periyar beckon, while a short flight west takes you to the
-little-known but sublime tropical reefs of the Lakshadweep islands. A
-thin strip on the southwest coastline, sandwiched between the
-Lakshadweep Sea and the forested Western Ghats that define its
-border with Tamil Nadu to the east, Kerala covers a mere 1.3% of the
-countrys total land area, yet its rich resources have long attracted
-visitors from across the oceans. It is in fact here that the first seafarers
-set foot on Indian soil. It is believed that Kerala has had trade links
-with Egypt,Rome, Arabia and China.
+                        India's most verdant state, rated by National Geographic Traveller as
+                        one of the world's 50 must-see destinations, is a paradisiacal
+                        landscape of palm-lined beaches, steamy jungles, plantation-covered
+                        hills, and tropical rivers and lakes. Visitors come here primarily to
+                        unwind and indulge; this is, after all, where succumbing to a
+                        therapeutic Ayurvedic massage is as mandatory as idling away an
+                        afternoon aboard a slowly drifting kettuvallam, or sipping coconut
+                        water under a tropical sun before taking in a wonderfully ritualized
+                        Kathakali dance. Eastward, the spice-scented Cardamom Hills and wild
+                        elephants of Periyar beckon, while a short flight west takes you to the
+                        little-known but sublime tropical reefs of the Lakshadweep islands. A
+                        thin strip on the southwest coastline, sandwiched between the
+                        Lakshadweep Sea and the forested Western Ghats that define its
+                        border with Tamil Nadu to the east, Kerala covers a mere 1.3% of the
+                        country's total land area, yet its rich resources have long attracted
+                        visitors from across the oceans. It is in fact here that the first seafarers
+                        set foot on Indian soil. It is believed that Kerala has had trade links
+                        with Egypt, Rome, Arabia and China.
                     </p>
                     <p>
                         Contemporary Kerala was created in 1956 from the former princely states of Travancore, Kochi, and
@@ -97,11 +101,11 @@ with Egypt,Rome, Arabia and China.
         <section class="districts">
             <h2>OUR DISTRICTS</h2>
             <div class="district">
-                <img src="images\tvm.jpg" alt="Thiruvananthapuram">
+                <img src="images/tvm.jpg" alt="Thiruvananthapuram">
                 <h3>THIRUVANANTHAPURAM</h3>
             </div>
             <div class="district">
-                <img src="images\kottayam.jpg" alt="Kottayam">
+                <img src="images/kottayam.jpg" alt="Kottayam">
                 <h3>KOTTAYAM</h3>
             </div>
             <div class="district">
@@ -109,15 +113,15 @@ with Egypt,Rome, Arabia and China.
                 <h3>ERNAKULAM</h3>
             </div>
             <div class="district">
-                <img src="images\kasargode.jpg" alt="Kasargode">
+                <img src="images/kasargode.jpg" alt="Kasargode">
                 <h3>KASARGODE</h3>
             </div>
             <div class="district">
-                <img src="images\Wayanad-1.jpg" alt="Wayanad">
+                <img src="images/Wayanad-1.jpg" alt="Wayanad">
                 <h3>WAYANAD</h3>
             </div>
             <div class="district">
-                <img src="images\palakkad.jpg" alt="Palakkad">
+                <img src="images/palakkad.jpg" alt="Palakkad">
                 <h3>PALAKKAD</h3>
             </div>
             <button class="see-more">SEE MORE</button>
@@ -152,5 +156,15 @@ with Egypt,Rome, Arabia and China.
             </form>
         </section>
     </main>
+    
+    <script>
+        const hamburger = document.querySelector('.hamburger');
+        const navLinks = document.querySelector('.nav-links');
+
+        hamburger.addEventListener('click', () => {
+            navLinks.classList.toggle('active');
+        });
+    </script>
 </body>
 </html>
+
